# static-glib

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pymarkdown.yml  .pyspelling.yml  AGENTS.md  ReadMe.md  config.toml  es-local.dic  mastodon.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publicar.yml  revisar.yml
content/: 20001116132200244.md  20001117003459333.md  20001117232257203.md  20001118014647907.md  2000111823035754.md  20001118230548872.md  20001118230652450.md  20001119133438294.md  20001120005540846.md  20001120043547979.md  2000112008101115.md  20001120164303916.md  20001120173526705.md  20001120181330772.md  20001122180242670.md  20001127153216468.md  20001127195326225.md  20001129191605779.md  20001130022245345.md  2000113012264118.md  20001204124228424.md  20001204191853263.md  20001206002121875.md  20001206234125834.md  20001207111847245.md  20001208222522318.md  2000121106125677.md  20001211062216690.md  2000121106442510.md  20001211071147344.md  20001211110934398.md  20001211162636817.md  20001212112515329.md  20001213000707566.md  20001214233846726.md  200012171232480.md  20001218155155730.md  20001223083109634.md  20001226030823384.md  20001227212351436.md  (+1737 more)
content/20030316121306430/: index.md
content/20030608214331721/: index.md
content/20031121154449531/: index.md
sass/: glib.scss  pico.classless.scss  postcss.config.js
scripts/: corregir_diccionario.py  crear_articulo.py  mastodon.py
static/: humans.txt  robots.txt  search.js
templates/: index.html  page.html  post_macros.html  robots.txt
(+52 files in other folders)
