[project]
name = "glib-tools"
version = "0.1.0"
description = "Herramientas de automatización para GLiB"
requires-python = ">=3.12"
dependencies = [
    "pre-commit",
    "pylint",
    "pymarkdownlnt",
    "pyspelling",
    "python-dateutil",
    "requests",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
